--- a/style.css
+++ b/style.css
@@ -6,10 +6,11 @@
 
 body {
   font-family: "Poppins", sans-serif;
+  margin: 0;
 }
 
 section {
-  padding: 120px;
+  padding: 160px;
 }
 
 h1 {
@@ -39,6 +40,7 @@ h4 {
 a {
   color: var(--secondary-color);
   text-decoration: none;
+  scroll-behavior: smooth;
 }
 
 a:hover {
@@ -55,9 +57,8 @@ ul {
   padding: 0;
 }
 
-li {
-  list-style: none;
-  display: inline-block;
+i {
+  margin-right: 10px;
 }
 
 li img {
@@ -78,9 +79,61 @@ section.light {
   background-color: var(--third-color);
 }
 
+header,
+footer {
+  background-color: rgba(0, 0, 0, 0.8);
+  width: 100%;
+}
+
+header {
+  position: fixed;
+}
+
+header ul {
+  text-align: end;
+}
+
+header li {
+  margin: 10px;
+}
+
+footer {
+  position: absolute;
+  text-align: center;
+  font-weight: 200;
+  font-size: 14px;
+  color: var(--third-color);
+}
+
+.about li,
+header li {
+  list-style: none;
+  display: inline-block;
+}
+
+.projects {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.projects div {
+  margin: 40px;
+}
+
+.projects-page h2,
+.contact-info {
+  text-align: center;
+  margin-bottom: 60px;
+}
+
 .main {
   display: flex;
   justify-content: space-around;
+}
+
+.github {
+  margin-top: 60px;
+  text-align: center;
 }
 
 .about-page {
@@ -99,4 +152,87 @@ section.light {
 
 .intro {
   margin: 70px;
+}
+
+.contact-links li {
+  list-style: none;
+  margin: 30px;
+  text-align: center;
+}
+
+.contact h3 {
+  margin: 40px 0 100px;
+}
+
+@media (max-width: 1180px) {
+  section {
+    padding: 50px;
+  }
+
+  img {
+    width: 260px;
+    margin-top: 60px;
+  }
+
+  h1 {
+    font-size: 48px;
+  }
+
+  h2 {
+    font-size: 26px;
+    line-height: 30px;
+  }
+
+  h3,
+  h4 {
+    font-size: 18px;
+  }
+
+  .main {
+    padding-top: 100px;
+  }
+
+  .about {
+    padding: 40px;
+  }
+}
+
+@media (max-width: 700px) {
+  section {
+    padding: 30px;
+  }
+
+  img {
+    width: 160px;
+    display: block;
+    margin: 0 auto;
+  }
+
+  footer {
+    font-size: 10px;
+  }
+
+  .main img {
+    display: none;
+  }
+
+  .about-page {
+    display: block;
+  }
+
+  .about-page ul img {
+    width: 50px;
+  }
+
+  .projects {
+    display: block;
+  }
+
+  .contact-info h3 {
+    margin: 0;
+  }
+
+  .contact-links {
+    font-size: 14px;
+  }
 }
