--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body {
   font-family: "Poppins", sans-serif;
   margin: 0;
+  scroll-behavior: smooth;
 }
 
 section {
@@ -40,7 +41,6 @@ h4 {
 a {
   color: var(--secondary-color);
   text-decoration: none;
-  scroll-behavior: smooth;
 }
 
 a:hover {
@@ -50,7 +50,6 @@ a:hover {
 img {
   width: 360px;
   border-radius: 18px;
-  border: 2px dotted var(--secondary-color);
 }
 
 ul {
@@ -202,18 +201,17 @@ header li {
     padding: 30px;
   }
 
-  img {
-    width: 160px;
-    display: block;
-    margin: 0 auto;
-  }
-
   footer {
     font-size: 10px;
   }
 
-  .main img {
+  .main-img {
     display: none;
+  }
+
+  .about-img {
+    display: block;
+    margin: 0 auto;
   }
 
   .about-page {
