--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ img {
 }
 
 ul {
-  padding: 0;
+  padding: 0 50px 0 0;
 }
 
 i {
@@ -198,7 +198,11 @@ header li {
 
 @media (max-width: 700px) {
   section {
-    padding: 30px;
+    padding: 106px 0;
+  }
+
+  ul {
+    padding: 0;
   }
 
   footer {
